# calloop

./: .cirrus.yml  .gitignore  .travis.yml  404.html  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  README.tpl  adapt_io_example.rs  async_example.rs  ch00-00-where-to-start.html  ch01-00-how-an-event-loop-works.html  ch02-00-event-sources.html  ch02-01-generic.html  ch02-02-timers.html  ch02-03-ping.html  ch02-04-channels.html  ch02-05-signals.html  ch02-06-errors.html  ch03-00-async-await.html  ch03-01-run-async-code.html  ch03-02-async-io-types.html  ch04-00-a-full-example-zeromq.html  ch04-01-composition.html  ch04-02-creating-our-source-part-1-our-types.html  ch04-03-creating-our-source-part-2-setup-methods.html  ch04-04-creating-our-source-part-3-processing-events-almost.html  ch04-05-creating-our-source-part-4-processing-events-really.html  ch04-06-the-full-zeromq-event-source-code.html  index.html  print.html  searchindex.js  searchindex.json  timer_example.rs  zmqsource.rs
.github/workflows/: ci.yml  docs.yml
api/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
api/calloop/: all.html  enum.Mode.html  enum.PostAction.html  index.html  macro.batch_register.html  macro.batch_reregister.html  macro.batch_unregister.html  sidebar-items.js  struct.Dispatcher.html  struct.EventIterator.html  struct.EventLoop.html  struct.Idle.html  struct.Interest.html  struct.LoopHandle.html  struct.LoopSignal.html  struct.Poll.html  struct.Readiness.html  struct.RegistrationToken.html  struct.Token.html  struct.TokenFactory.html  trait.EventSource.html
api/calloop/channel/: enum.Event.html  fn.channel.html  fn.sync_channel.html  index.html  struct.Channel.html  struct.ChannelError.html  struct.Sender.html  struct.SyncSender.html
api/calloop/error/: enum.Error.html  index.html  struct.InsertError.html  type.Result.html
api/calloop/futures/: enum.ExecutorError.html  fn.executor.html  index.html  sidebar-items.js  struct.Executor.html  struct.ExecutorDestroyed.html  struct.Scheduler.html
api/calloop/generic/: index.html  struct.FdWrapper.html  struct.Generic.html  struct.NoIoDrop.html
api/calloop/io/: index.html  struct.Async.html  struct.Readable.html  struct.Writable.html
api/calloop/ping/: fn.make_ping.html  index.html  struct.PingError.html  type.Ping.html  type.PingSource.html
api/calloop/sources/futures/: enum.ExecutorError.html  fn.executor.html  index.html  struct.Executor.html  struct.ExecutorDestroyed.html  struct.Scheduler.html
api/calloop/timer/: enum.TimeoutAction.html  index.html  struct.TimeoutFuture.html  struct.Timer.html
api/calloop/transient/: index.html  struct.TransientSource.html
api/search.desc/calloop/: calloop-desc-0-.js
api/search.index/: 0120fe202137.js  0485e7eca7fb.js  07ca85ec5e07.js  09519431c818.js  1029e1336899.js  29ce2e957f48.js  30782f0bf4ad.js  30bec8ff56bd.js  3d8c5bfbeda2.js  4dcdeef30330.js  541e3b550943.js  61089aeafb37.js  618d3204f851.js  62bfa0559c95.js  6c1ae3695174.js  78665e4d0047.js  7b5dcad7d13c.js  root.js
api/search.index/crateNames/: 5df4bf12e461.js
api/search.index/desc/: 44f548fadf99.js
api/search.index/entry/: f979adf691b8.js
api/search.index/function/: 4c8dc89f3c93.js
api/search.index/generic_inverted_index/: 8e3b14654208.js
api/search.index/name/: de7cf7d0aaea.js
api/search.index/normalizedName/: 65756001c5db.js
api/search.index/path/: 1de3651e9ccf.js
api/search.index/type/: df5385a5bc6f.js
api/src/calloop/: error.rs.html  io.rs.html  lib.rs.html  list.rs.html  loop_logic.rs.html  macros.rs.html  sys.rs.html  token.rs.html
api/src/calloop/sources/: channel.rs.html  (+6 more)
benches/: timer.rs
doc/: Cargo.toml  book.toml
doc/src/: SUMMARY.md  adapt_io_example.rs  async_example.rs  ch00-00-where-to-start.md  ch01-00-how-an-event-loop-works.md  ch02-00-a-simple-example.md  ch02-00-event-sources.md  ch02-01-generic.md  ch02-02-timers.md  ch02-03-ping.md  ch02-05-signals.md  ch02-06-errors.md  ch03-00-a-full-example-zeromq.md  ch03-00-async-await.md  ch03-00-how-to-do-x-in-calloop.md  ch03-01-composition.md  ch03-02-async-io-types.md  ch03-02-run-a-subprocess.md  ch03-03-creating-our-source-part-2-setup-methods.md  ch03-03-use-blocking-io-types.md  ch03-04-creating-our-source-part-3-processing-events-almost.md  ch03-04-use-a-network-socket.md  ch03-05-creating-our-source-part-4-processing-events-really.md  ch03-06-the-full-zeromq-event-source-code.md  ch04-00-a-full-example-zeromq.md  ch04-00-how-to-do-x-in-calloop.md  ch04-01-composition.md  ch04-01-run-async-code.md  ch04-02-creating-our-source-part-1-our-types.md  ch04-02-run-a-subprocess.md  ch04-03-creating-our-source-part-2-setup-methods.md  ch04-03-use-blocking-io-types.md  ch04-04-creating-our-source-part-3-processing-events-almost.md  ch04-04-use-a-network-socket.md  ch04-05-creating-our-source-part-4-processing-events-really.md  ch04-05-write-integration-tests.md  ch04-06-the-full-zeromq-event-source-code.md  timer_example.rs  zmqsource.rs
examples/: high_precision.rs  timer.rs
src/: error.rs  io.rs  lib.rs  list.rs  loop_logic.rs  macros.rs  sys.rs  token.rs
src/sources/: channel.rs  futures.rs  generic.rs  mod.rs  ping.rs  signals.rs  socket.rs  stream.rs  timer.rs  transient.rs
src/sources/ping/: eventfd.rs  iocp.rs  pipe.rs
src/sources/timer/: mod.rs  threaded.rs  timerfd.rs
src/sys/: epoll.rs  kqueue.rs  mod.rs
tests/: signals.rs
(+31 files in other folders)
