[package]
name = "calloop"
version = "0.11.0"
authors = ["Elinor Berger <elinor@safaradeg.net>"]
documentation = "https://docs.rs/calloop/"
repository = "https://github.com/Smithay/calloop"
license = "MIT"
description = "A callback-based event loop"
keywords = ["events", "loop", "callback", "eventloop", "unix"]
autotests = false
edition = "2018"
readme = "README.md"
rust-version = "1.63.0"

[workspace]
members = ["doc"]

[badges]
codecov = { repository = "Smithay/calloop" }

[dependencies]
async-task = { version = "4.4.0", optional = true }
bitflags = "1.2"
futures-io = { version = "0.3.5", optional = true }
io-lifetimes = "1.0.3"
log = "0.4"
nix = { version = "0.26", default-features = false, features = [
    "signal",
], optional = true }
pin-utils = { version = "0.1.0", optional = true }
polling = "2.6.0"
rustix = { version = "0.38", default-features = false, features = [
    "event",
    "fs",
    "pipe",
    "std",
] }
slab = "0.4.8"
thiserror = "1.0"

[dev-dependencies]
futures = "0.3.5"
rustix = { version = "0.38", default-features = false, features = ["net"] }

[features]
block_on = ["pin-utils"]
executor = ["async-task"]
nightly_coverage = []
signals = ["nix"]

[package.metadata.docs.rs]
features = ["block_on", "executor"]
rustdoc-args = ["--cfg", "docsrs"]

[[test]]
name = "signals"
harness = false
