[package]
name = "calloop"
version = "0.14.3"
authors = ["Elinor Berger <elinor@safaradeg.net>"]
documentation = "https://docs.rs/calloop/"
repository = "https://github.com/Smithay/calloop"
license = "MIT"
description = "A callback-based event loop"
keywords = [ "events", "loop", "callback", "eventloop", "unix" ]
autotests = false
edition = "2018"
readme = "README.md"
rust-version = "1.63.0"

[workspace]
members = [ "doc" ]

[badges]
codecov = { repository = "Smithay/calloop" }

[dependencies]
async-task = { version = "4.4.0", optional = true }
bitflags = "2.4"
futures-io = { version = "0.3.5", optional = true }
pin-utils = { version = "0.1.0", optional = true }
polling = "3.0.0"
rustix = { version = "1.0.0", default-features = false, features = ["event", "fs", "pipe", "std"] }
slab = "0.4.8"
tracing = { version = "0.1.40", default-features = false, features = ["log"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", default-features = false, features = ["signal"], optional = true }

[dev-dependencies]
futures = "0.3.5"
rustix = { version = "1.0.0", default-features = false, features = ["net"] }
criterion = { version = "0.4" }

[features]
block_on = ["pin-utils"]
executor = ["async-task"]
nightly_coverage = []
signals = ["nix"]

[package.metadata.docs.rs]
features = ["block_on", "executor", "signals"]
rustdoc-args = ["--cfg", "docsrs"]

[[test]]
name = "signals"
harness = false

[[bench]]
name = "timer"
harness = false
